# pv_analytics_suit

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml
notebooks/: 01_pv_data_exploration.ipynb  02_data_description_analysis.ipynb  03_open_weather_api_samples.ipynb
